--- a/Resources/Prototypes/_CP14/audio_music.yml
+++ b/Resources/Prototypes/_CP14/audio_music.yml
@@ -1,12 +1,12 @@
 # 4 Priority - Special
 
 - type: ambientMusic
-  id: CP14Ritual
+  id: CP14Magic
   sound:
     params:
       volume: -12
     collection: CP14AmbienceMagic
-  rules: NearRitual
+  rules: NearMagic
   priority: 4
 
 # 3 Priority - Departments
@@ -76,7 +76,7 @@
     - !type:AlwaysTrueRule
 
 - type: rules
-  id: NearRitual
+  id: NearMagic
   rules:
     - !type:NearbyEntitiesRule
       count: 1
@@ -84,6 +84,7 @@
         components:
           - CP14MagicRitualPhase
           - CP14MagicRitual
+          - CP14DemiplanPassway
       range: 6
 
 - type: rules
