--- a/Resources/Prototypes/_CP14/Entities/subdimensionGenTEST.yml
+++ b/Resources/Prototypes/_CP14/Entities/subdimensionGenTEST.yml
@@ -30,6 +30,37 @@
     state: key1
 
 - type: entity
+  id: CP14DemiplanTimedRadiusPassway
+  categories: [ ForkFiltered ]
+  name: demiplan radius rift
+  description: a gap in space that allows you to travel between world and demiplans.
+  components:
+  - type: CP14DemiplanRadiusTimedPassway
+    maxEntities: 3
+    delay: 2
+  - type: CP14DemiplanConnection
+  - type: Transform
+    anchored: True
+  - type: Clickable
+  - type: Physics
+    bodyType: Static
+  - type: Sprite
+    drawdepth: Effects
+    sprite: /Textures/_CP14/Structures/Dungeon/rift.rsi
+    layers:
+    - state: rift
+      shader: unshaded
+  - type: PointLight
+    radius: 8
+    energy: 2
+    netsync: false
+  - type: SingularityDistortion
+    falloffPower: 1.5
+    intensity: 50 
+  - type: FloatingVisuals
+    canFloat: true
+
+- type: entity
   id: CP14DemiplanPassway
   categories: [ ForkFiltered ]
   name: demiplan rift
