--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/T1_Caves/config.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/T1_Caves/config.yml
@@ -1,61 +1,30 @@
-- type: cp14DemiplanLocation
-  id: T1GrasslandIsland
-  locationConfig: CP14ExpeditionGrasslandIsland
+- type: cp14DemiplaneLocation
+  id: T1Caves
+  locationConfig: CP14ExpeditionCaves
   components:
-  - type: MapLight
-    ambientLightColor: "#BFEEFFFF"
-  - type: CP14MapFloorOccluder
-  - type: Parallax
-    parallax: CP14Ocean
   - type: CP14WeatherController
     entries:
-    - visuals: CP14Rain
-    - visuals: CP14Storm
     - visuals: CP14Mist
-  - type: CP14DayCycle
-    timeEntries:
-    - duration: 80
-      color: '#754A4AFF'
-    - duration: 80
-      color: '#E0BA87FF'
-    - duration: 80
-      color: '#BFEEFFFF'
-    - period: Night
-      duration: 80
-      color: '#385163FF'
-    - period: Night
-      duration: 80
-      color: '#060D12FF'
-    - period: Night
-      duration: 80
-      color: '#000000FF'
-    - period: Night
-      duration: 80
-      color: '#000000FF'
-    - duration: 80
-      color: '#120906FF'
 
 - type: dungeonConfig
-  id: CP14ExpeditionGrasslandIsland
+  id: CP14ExpeditionCaves
   layers:
     # Masks (from center to border!)
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionGrasslandIslandFloorMaskSand
+      proto: CP14ExpeditionCavesFloorMaskBorder
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionGrasslandIslandFloorMaskGrass
+      proto: CP14ExpeditionCavesFloorMaskStone
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionGrasslandIslandFloorMaskStone
+      proto: CP14ExpeditionCavesFloorMaskAir
     # Exterior rooms
-    - !type:EntityTableDunGen
-      minCount: 1
-      maxCount: 2
-      table:
-        id: CP14GrasslandIslandExteriorRoomSpawner
+    #here
     # Biome Spawner fills (from border to center!) order is very important! For inexplicable reasons, only a certain sequence works!
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionGrasslandIslandFillGrassland
+      proto: CP14ExpeditionCavesFillBorder
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionGrasslandIslandFillCave
+      proto: CP14ExpeditionCavesFillAir
+    - !type:PrototypeDunGen
+      proto: CP14ExpeditionCavesFillCave
     # Ore and resources 
     - !type:OreDunGen
       replacement: CP14WallStone
@@ -77,43 +46,43 @@
       maxGroupSize: 15
     # Mobs
     - !type:MobsDunGen
-      minCount: 2
-      maxCount: 5
+      minCount: 5
+      maxCount: 10
       groups:
-      - id: CP14SpawnMobDinoYumkaraptor
+      - id: CP14SpawnMobUndeadZombie
         amount: 1
     # Enter and Exit
     - !type:MobsDunGen
       minCount: 1
       maxCount: 2
       groups:
-      - id: CP14DemiplanEntryPointMarker
+      - id: CP14DemiplaneEntryPointMarker
         amount: 1
     - !type:MobsDunGen
       minCount: 2
       maxCount: 2
       groups:
-      - id: CP14DemiplanPassway
+      - id: CP14DemiplanePassway
         amount: 1
     # Loot
     - !type:EntityTableDunGen
-      minCount: 5
-      maxCount: 20
+      minCount: 10
+      maxCount: 25
       table: !type:NestedSelector
         tableId: CP14TableExpeditionLootCommon
 
 - type: dungeonConfig
-  id: CP14ExpeditionGrasslandIslandFloorMaskStone
+  id: CP14ExpeditionCavesFloorMaskAir
   layers:
   - !type:NoiseDistanceDunGen
     size: 80, 80
     distanceConfig: !type:DunGenEuclideanSquaredDistance
       blendWeight: 0.5
     layers:
-    - tile: CP14FloorBase
+    - tile: CP14FloorGrass
       threshold: 0.50
       noise:
-        frequency: 0.010
+        frequency: 0.030
         noiseType: OpenSimplex2
         fractalType: FBm
         octaves: 5
@@ -121,30 +90,12 @@
         gain: 0.5
 
 - type: dungeonConfig
-  id: CP14ExpeditionGrasslandIslandFloorMaskGrass
+  id: CP14ExpeditionCavesFloorMaskStone
   layers:
   - !type:NoiseDistanceDunGen
     size: 120, 120
     distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.6
-    layers:
-    - tile: CP14FloorGrass
-      threshold: 0.50
-      noise:
-        frequency: 0.010
-        noiseType: OpenSimplex2
-        fractalType: FBm
-        octaves: 5
-        lacunarity: 2
-        gain: 0.5
-
-- type: dungeonConfig
-  id: CP14ExpeditionGrasslandIslandFloorMaskSand
-  layers:
-  - !type:NoiseDistanceDunGen
-    size: 130, 130
-    distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.7
+      blendWeight: 0.9
     layers:
     - tile: CP14FloorSand
       threshold: 0.50
@@ -157,22 +108,51 @@
         gain: 0.5
 
 - type: dungeonConfig
-  id: CP14ExpeditionGrasslandIslandFillGrassland
+  id: CP14ExpeditionCavesFloorMaskBorder
+  layers:
+  - !type:NoiseDistanceDunGen
+    size: 130, 130
+    distanceConfig: !type:DunGenEuclideanSquaredDistance
+      blendWeight: 1
+    layers:
+    - tile: CP14FloorBase
+      threshold: 0.50
+      noise:
+        frequency: 0.010
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        octaves: 5
+        lacunarity: 2
+        gain: 0.5
+
+- type: dungeonConfig
+  id: CP14ExpeditionCavesFillAir
   reserveTiles: true
   data:
     entities:
-      Fill: CP14BiomeSpawnerGrassland
+      Fill: CP14BiomeSpawnerCaveEmpty
   layers:
   - !type:FillGridDunGen
     allowedTiles:
     - CP14FloorGrass
 
 - type: dungeonConfig
-  id: CP14ExpeditionGrasslandIslandFillCave
+  id: CP14ExpeditionCavesFillCave
   reserveTiles: true
   data:
     entities:
       Fill: CP14BiomeSpawnerCave
+  layers:
+  - !type:FillGridDunGen
+    allowedTiles:
+    - CP14FloorSand
+
+- type: dungeonConfig
+  id: CP14ExpeditionCavesFillBorder
+  reserveTiles: true
+  data:
+    entities:
+      Fill: CP14WallStoneIndestructable
   layers:
   - !type:FillGridDunGen
     allowedTiles:
