intro and outro demiplan music

--- a/Resources/Prototypes/_CP14/Entities/subdimensionGenTEST.yml
+++ b/Resources/Prototypes/_CP14/Entities/subdimensionGenTEST.yml
@@ -43,6 +43,7 @@
     anchored: True
   - type: Clickable
   - type: Physics
+    canCollide: false
     bodyType: Static
   - type: Sprite
     drawdepth: Effects
@@ -72,6 +73,7 @@
   - type: InteractionOutline
   - type: Clickable
   - type: Physics
+    canCollide: false
     bodyType: Static
   - type: Sprite
     drawdepth: Effects
