--- a/Resources/Prototypes/_CP14/Entities/subdimensionGenTEST.yml
+++ b/Resources/Prototypes/_CP14/Entities/subdimensionGenTEST.yml
@@ -3,26 +3,19 @@
   id: CP14BaseSubdimensionalKey
   abstract: true
   categories: [ ForkFiltered ]
-  name: key
-  description: A small, intricate piece of iron that opens certain locks. Don't give it to just anyone!
-  components: 
-  - type: Tag
-    tags:
-    - CP14Key
-  - type: Item
-    size: Tiny
+  name: demiplan key
+  description: The core that connects the real world to the demiplane. Use it to open a temporary passage to the other world.
+  components:
   - type: Sprite
-    sprite: _CP14/Objects/keys.rsi
-  - type: EmitSoundOnLand
-    sound:
-      path: /Audio/_CP14/Items/key_drop.ogg
-      params:
-        variation: 0.05
-        
+    drawdepth: Effects
+    sprite: /Textures/_CP14/Structures/Dungeon/demiplan_rift_core.rsi
+    layers:
+    - state: core
+      shader: unshaded
+
 - type: entity
   id: CP14SubdimensionalKey
   parent: CP14BaseSubdimensionalKey
-  name: subdimensional key
   components:
   - type: CP14DemiplaneGeneratorData
   - type: CP14DemiplaneRift
@@ -30,14 +23,11 @@
     state: key1
 
 - type: entity
-  id: CP14DemiplaneTimedRadiusPassway
+  id: CP14DemiplanRiftCore
   categories: [ ForkFiltered ]
-  name: demiplane radius rift
-  description: a gap in space that allows you to travel between world and demiplanes.
+  name: demiplan rift core
+  description: A subtle connection between the real world and the demiplane where the adventurers went. Sooner or later they will return from there.
   components:
-  - type: CP14DemiplaneRadiusTimedPassway
-    maxEntities: 3
-    delay: 2
   - type: CP14DemiplaneRift
   - type: Transform
     anchored: True
@@ -47,44 +37,54 @@
     bodyType: Static
   - type: Sprite
     drawdepth: Effects
-    sprite: /Textures/_CP14/Structures/Dungeon/rift.rsi
+    sprite: /Textures/_CP14/Structures/Dungeon/demiplan_rift_core.rsi
     layers:
-    - state: rift
+    - state: core
+      shader: unshaded
+    - state: pulse
+      shader: unshaded
+  - type: PointLight
+    radius: 2
+    energy: 2
+    color: "#371c5c"
+    netsync: false
+
+- type: entity
+  id: CP14DemiplaneTimedRadiusPassway
+  parent: CP14DemiplanRiftCore
+  name: pulsating demiplane rift
+  description: This rift is gaining strength, and will trap all nearby creatures in a demiplane in a second!
+  components:
+  - type: CP14DemiplaneRadiusTimedPassway
+    maxEntities: 3
+    delay: 4
+  - type: Sprite
+    drawdepth: Effects
+    sprite: /Textures/_CP14/Structures/Dungeon/demiplan_rift.rsi
+    layers:
+    - state: pulse
       shader: unshaded
   - type: PointLight
     radius: 8
-    energy: 2
-    netsync: false
   - type: SingularityDistortion
     falloffPower: 1.5
     intensity: 50
 
 - type: entity
   id: CP14DemiplanePassway
-  categories: [ ForkFiltered ]
+  parent: CP14DemiplanRiftCore
   name: demiplane rift
-  description: a gap in space that allows you to travel between world and demiplanes.
+  description: A gap in space that allows you to travel between world and demiplanes.
   components:
   - type: CP14DemiplaneRiftOpened
   - type: CP14DemiplaneRift
     activeTeleport: false
-  - type: Transform
-    anchored: True
-  - type: InteractionOutline
-  - type: Clickable
-  - type: Physics
-    canCollide: false
-    bodyType: Static
   - type: Sprite
     drawdepth: Effects
-    sprite: /Textures/_CP14/Structures/Dungeon/rift.rsi
+    sprite: /Textures/_CP14/Structures/Dungeon/demiplan_rift.rsi
     layers:
-    - state: rift
+    - state: anom
       shader: unshaded
-  - type: PointLight
-    radius: 8
-    energy: 2
-    netsync: false
   - type: SingularityDistortion
     falloffPower: 1.5
     intensity: 50
@@ -98,6 +98,6 @@
   - type: Sprite
     layers:
     - state: green
-    - sprite: /Textures/_CP14/Structures/Dungeon/rift.rsi
-      state: rift
+    - sprite: /Textures/_CP14/Structures/Dungeon/demiplan_rift.rsi
+      state: pulse
   - type: CP14DemiplaneRift
