auto destroy demiplans try 2 (better)

--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/base.yml
@@ -221,6 +221,8 @@
   - type: CP14FootprintHolder
     decalProto: CP14Footprints
   - type: CP14FootprintTrailer
+  - type: CP14DemiplaneStabilizer
+    requireAlive: true
 
 
 - type: entity
