--- a/Resources/Prototypes/_CP14/Entities/subdimensionGenTEST.yml
+++ b/Resources/Prototypes/_CP14/Entities/subdimensionGenTEST.yml
@@ -14,7 +14,7 @@
       shader: unshaded
 
 - type: entity
-  id: CP14SubdimensionalKey
+  id: CP14DemiplanKey
   parent: CP14BaseSubdimensionalKey
   components:
   - type: CP14DemiplaneGeneratorData
