--- a/Resources/Prototypes/_CP14/Store/buy.yml
+++ b/Resources/Prototypes/_CP14/Store/buy.yml
@@ -61,3 +61,19 @@
   - !type:CP14BuyItemsService
     product:
       CP14BrassChestFilledFarmSeeds: 1
+
+- type: storePositionBuy
+  id: Demiplan
+  name: cp14-store-buy-alchemy-demiplan-name
+  desc: cp14-store-buy-alchemy-demiplan-desc
+  code: DEMIPLAN
+  icon: 
+    sprite: /Textures/_CP14/Structures/Dungeon/demiplan_rift.rsi
+    state: pulse
+  price: 
+    min: 100
+    max: 200
+  services:
+  - !type:CP14BuyItemsService
+    product:
+      CP14DemiplanKey: 1
