--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/T1_Caves/config.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/T1_Caves/config.yml
@@ -1,6 +1,8 @@
 - type: cp14DemiplaneLocation
   id: T1Caves
   locationConfig: CP14ExpeditionCaves
+  tags:
+  - CP14DemiplanOre
   components:
   - type: CP14WeatherController
     entries:
@@ -25,25 +27,6 @@
       proto: CP14ExpeditionCavesFillAir
     - !type:PrototypeDunGen
       proto: CP14ExpeditionCavesFillCave
-    # Ore and resources 
-    - !type:OreDunGen
-      replacement: CP14WallStone
-      entity: CP14WallStoneGoldOre
-      count: 10
-      minGroupSize: 10
-      maxGroupSize: 15
-    - !type:OreDunGen
-      replacement: CP14WallStone
-      entity: CP14WallStoneIronOre
-      count: 10
-      minGroupSize: 10
-      maxGroupSize: 15
-    - !type:OreDunGen
-      replacement: CP14WallStone
-      entity: CP14WallStoneCopperOre
-      count: 10
-      minGroupSize: 10
-      maxGroupSize: 15
     # Mobs
     - !type:MobsDunGen
       minCount: 5
