--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/rocks.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/rocks.yml
@@ -7,6 +7,8 @@
   placement:
     mode: SnapgridCenter 
   components:
+  - type: Transform
+    anchored: True
   - type: Clickable
   - type: Sprite
     drawdepth: Mobs
