--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/T1_Grassland_island/config.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/T1_Grassland_island/config.yml
@@ -3,6 +3,7 @@
   locationConfig: CP14ExpeditionGrasslandIsland
   tags:
   - CP14DemiplanOre
+  - CP14DemiplanOpenSky
   components:
   - type: MapLight
     ambientLightColor: "#BFEEFFFF"
