--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
@@ -70,7 +70,7 @@
         solution: vial
       - !type:SpawnEntitiesBehavior
         spawn:
-          ShardGlass:
+          CP14GlassShard:
             min: 1
             max: 1
         transferForensics: true
