--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
@@ -1,5 +1,7 @@
 - type: cp14DemiplaneModifier
   id: GoldOre
+  unique: false
+  reward: 2
   requiredTags:
   - CP14DemiplanOre
   layers:
@@ -12,6 +14,8 @@
 
 - type: cp14DemiplaneModifier
   id: IronOre
+  unique: false
+  reward: 1.5
   requiredTags:
   - CP14DemiplanOre
   layers:
@@ -24,6 +28,8 @@
 
 - type: cp14DemiplaneModifier
   id: CopperOre
+  unique: false
+  reward: 1
   requiredTags:
   - CP14DemiplanOre
   layers:
@@ -36,6 +42,8 @@
 
 - type: cp14DemiplaneModifier
   id: Explosive
+  difficulty: 1
+  generationWeight: 0.25
   layers:
     - !type:MobsDunGen
       minCount: 25
@@ -46,6 +54,7 @@
 
 - type: cp14DemiplaneModifier
   id: CommonLoot
+  reward: 1
   generationWeight: 2
   layers:
     - !type:EntityTableDunGen
@@ -56,6 +65,7 @@
 
 - type: cp14DemiplaneModifier
   id: EnemyXeno
+  difficulty: 1
   requiredTags:
   - CP14DemiplanUnderground
   layers:
@@ -69,6 +79,7 @@
 
 - type: cp14DemiplaneModifier
   id: EnemyZombie
+  difficulty: 0.75
   layers:
     - !type:EntityTableDunGen
       minCount: 5
@@ -79,6 +90,7 @@
 
 - type: cp14DemiplaneModifier
   id: EnemyDyno
+  difficulty: 1.25
   requiredTags:
   - CP14DemiplanOpenSky
   layers:
@@ -91,6 +103,7 @@
 
 - type: cp14DemiplaneModifier
   id: EnemySnakes
+  difficulty: 1.5
   layers:
     - !type:EntityTableDunGen
       minCount: 5
@@ -103,6 +116,7 @@
 
 - type: cp14DemiplaneModifier
   id: EnemyMagmawind
+  difficulty: 1.5
   generationWeight: 0.5
   layers:
     - !type:MobsDunGen
