--- a/Resources/Prototypes/_CP14/ai_factions.yml
+++ b/Resources/Prototypes/_CP14/ai_factions.yml
@@ -30,3 +30,11 @@
   - CP14Adventurers
   - CP14Undead
   - CP14PeacefulAnimals
+
+- type: npcFaction
+  id: CP14Monster
+  hostile:
+  - CP14Adventurers
+  - CP14HostileEveryone
+  - CP14AggressiveAnimals
+  - CP14PeacefulAnimals
