move all alchemy reagents to modifiers

--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/T1_Grassland_island/config.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/T1_Grassland_island/config.yml
@@ -4,6 +4,7 @@
   tags:
   - CP14DemiplanOre
   - CP14DemiplanOpenSky
+  - CP14DemiplanGrass
   components:
   - type: MapLight
     ambientLightColor: "#BFEEFFFF"
