--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/T1_Grassland_island/config.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/T1_Grassland_island/config.yml
@@ -1,56 +1,66 @@
 - type: cp14DemiplaneLocation
-  id: T1Caves
-  locationConfig: CP14ExpeditionCaves
+  id: T1GrasslandIsland
+  locationConfig: CP14ExpeditionGrasslandIsland
+  tags:
+  - CP14DemiplanOre
+  - CP14DemiplanOpenSky
+  - CP14DemiplanGrass
   components:
+  - type: MapLight
+    ambientLightColor: "#BFEEFFFF"
+  - type: CP14MapFloorOccluder
+  - type: Parallax
+    parallax: CP14Ocean
+  - type: CP14CloudShadows
   - type: CP14WeatherController
     entries:
+    - visuals: CP14Rain
+    - visuals: CP14Storm
     - visuals: CP14Mist
+  - type: CP14DayCycle
+    timeEntries:
+    - duration: 80
+      color: '#754A4AFF'
+    - duration: 80
+      color: '#E0BA87FF'
+    - duration: 80
+      color: '#BFEEFFFF'
+    - period: Night
+      duration: 80
+      color: '#385163FF'
+    - period: Night
+      duration: 80
+      color: '#060D12FF'
+    - period: Night
+      duration: 80
+      color: '#000000FF'
+    - period: Night
+      duration: 80
+      color: '#000000FF'
+    - duration: 80
+      color: '#120906FF'
 
 - type: dungeonConfig
-  id: CP14ExpeditionCaves
+  id: CP14ExpeditionGrasslandIsland
   layers:
     # Masks (from center to border!)
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionCavesFloorMaskBorder
+      proto: CP14ExpeditionGrasslandIslandFloorMaskSand
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionCavesFloorMaskStone
+      proto: CP14ExpeditionGrasslandIslandFloorMaskGrass
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionCavesFloorMaskAir
+      proto: CP14ExpeditionGrasslandIslandFloorMaskStone
     # Exterior rooms
-    #here
+    - !type:EntityTableDunGen
+      minCount: 1
+      maxCount: 2
+      table:
+        id: CP14GrasslandIslandExteriorRoomSpawner
     # Biome Spawner fills (from border to center!) order is very important! For inexplicable reasons, only a certain sequence works!
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionCavesFillBorder
+      proto: CP14ExpeditionGrasslandIslandFillGrassland
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionCavesFillAir
-    - !type:PrototypeDunGen
-      proto: CP14ExpeditionCavesFillCave
-    # Ore and resources 
-    - !type:OreDunGen
-      replacement: CP14WallStone
-      entity: CP14WallStoneGoldOre
-      count: 10
-      minGroupSize: 10
-      maxGroupSize: 15
-    - !type:OreDunGen
-      replacement: CP14WallStone
-      entity: CP14WallStoneIronOre
-      count: 10
-      minGroupSize: 10
-      maxGroupSize: 15
-    - !type:OreDunGen
-      replacement: CP14WallStone
-      entity: CP14WallStoneCopperOre
-      count: 10
-      minGroupSize: 10
-      maxGroupSize: 15
-    # Mobs
-    - !type:MobsDunGen
-      minCount: 5
-      maxCount: 10
-      groups:
-      - id: CP14SpawnMobUndeadZombie
-        amount: 1
+      proto: CP14ExpeditionGrasslandIslandFillCave
     # Enter and Exit
     - !type:MobsDunGen
       minCount: 1
@@ -64,56 +74,14 @@
       groups:
       - id: CP14DemiplanePassway
         amount: 1
-    # Loot
-    - !type:EntityTableDunGen
-      minCount: 10
-      maxCount: 25
-      table: !type:NestedSelector
-        tableId: CP14TableExpeditionLootCommon
 
 - type: dungeonConfig
-  id: CP14ExpeditionCavesFloorMaskAir
+  id: CP14ExpeditionGrasslandIslandFloorMaskStone
   layers:
   - !type:NoiseDistanceDunGen
-    size: 80, 80
+    size: 110, 110
     distanceConfig: !type:DunGenEuclideanSquaredDistance
       blendWeight: 0.5
-    layers:
-    - tile: CP14FloorGrass
-      threshold: 0.50
-      noise:
-        frequency: 0.030
-        noiseType: OpenSimplex2
-        fractalType: FBm
-        octaves: 5
-        lacunarity: 2
-        gain: 0.5
-
-- type: dungeonConfig
-  id: CP14ExpeditionCavesFloorMaskStone
-  layers:
-  - !type:NoiseDistanceDunGen
-    size: 120, 120
-    distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.9
-    layers:
-    - tile: CP14FloorSand
-      threshold: 0.50
-      noise:
-        frequency: 0.010
-        noiseType: OpenSimplex2
-        fractalType: FBm
-        octaves: 5
-        lacunarity: 2
-        gain: 0.5
-
-- type: dungeonConfig
-  id: CP14ExpeditionCavesFloorMaskBorder
-  layers:
-  - !type:NoiseDistanceDunGen
-    size: 130, 130
-    distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 1
     layers:
     - tile: CP14FloorBase
       threshold: 0.50
@@ -126,33 +94,58 @@
         gain: 0.5
 
 - type: dungeonConfig
-  id: CP14ExpeditionCavesFillAir
+  id: CP14ExpeditionGrasslandIslandFloorMaskGrass
+  layers:
+  - !type:NoiseDistanceDunGen
+    size: 150, 150
+    distanceConfig: !type:DunGenEuclideanSquaredDistance
+      blendWeight: 0.6
+    layers:
+    - tile: CP14FloorGrass
+      threshold: 0.50
+      noise:
+        frequency: 0.010
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        octaves: 5
+        lacunarity: 2
+        gain: 0.5
+
+- type: dungeonConfig
+  id: CP14ExpeditionGrasslandIslandFloorMaskSand
+  layers:
+  - !type:NoiseDistanceDunGen
+    size: 160, 160
+    distanceConfig: !type:DunGenEuclideanSquaredDistance
+      blendWeight: 0.7
+    layers:
+    - tile: CP14FloorSand
+      threshold: 0.50
+      noise:
+        frequency: 0.010
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        octaves: 5
+        lacunarity: 2
+        gain: 0.5
+
+- type: dungeonConfig
+  id: CP14ExpeditionGrasslandIslandFillGrassland
   reserveTiles: true
   data:
     entities:
-      Fill: CP14BiomeSpawnerCaveEmpty
+      Fill: CP14BiomeSpawnerGrassland
   layers:
   - !type:FillGridDunGen
     allowedTiles:
     - CP14FloorGrass
 
 - type: dungeonConfig
-  id: CP14ExpeditionCavesFillCave
+  id: CP14ExpeditionGrasslandIslandFillCave
   reserveTiles: true
   data:
     entities:
       Fill: CP14BiomeSpawnerCave
-  layers:
-  - !type:FillGridDunGen
-    allowedTiles:
-    - CP14FloorSand
-
-- type: dungeonConfig
-  id: CP14ExpeditionCavesFillBorder
-  reserveTiles: true
-  data:
-    entities:
-      Fill: CP14WallStoneIndestructable
   layers:
   - !type:FillGridDunGen
     allowedTiles:
