--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island.yml
@@ -51,23 +51,23 @@
     - !type:PrototypeDunGen
       proto: CP14ExpeditionGrasslandIslandFloorMaskStone
     # Exterior rooms
-    - !type:EntityTableDunGen
+    #- !type:EntityTableDunGen
+    #  minCount: 1
+    #  maxCount: 2
+    #  table:
+    #    id: CP14GrasslandIslandExteriorRoomSpawner
+    # Enter and Exit
+    - !type:MobsDunGen
       minCount: 1
-      maxCount: 2
-      table:
-        id: CP14GrasslandIslandExteriorRoomSpawner
+      maxCount: 1
+      groups:
+      - id: CP14DemiplanEnterRoomMarker
+        amount: 1
     # Biome Spawner fills (from border to center!) order is very important! For inexplicable reasons, only a certain sequence works!
     - !type:PrototypeDunGen
       proto: CP14ExpeditionGrasslandIslandFillGrassland
     - !type:PrototypeDunGen
       proto: CP14ExpeditionGrasslandIslandFillCave
-    # Enter and Exit
-    - !type:MobsDunGen
-      minCount: 1
-      maxCount: 2
-      groups:
-      - id: CP14DemiplaneEntryPointMarker
-        amount: 1
     - !type:MobsDunGen
       minCount: 2
       maxCount: 2
