--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grass_geode.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grass_geode.yml
@@ -41,7 +41,7 @@
     - !type:BiomeDunGen
       biomeTemplate: CP14CavesGeneric
       tileMask:
-      - CP14FloorBase
+      - CP14FloorSand
     - !type:PrototypeDunGen
       proto: CP14DemiplaneGrassGeodeFillWater
     - !type:MobsDunGen
