--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/wild.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/wild.yml
@@ -172,12 +172,14 @@
       All: CP14GatherLumiMushroom
 
 - type: entity
-  parent: CP14BaseRock
+  parent: BaseRock
   id: CP14QuartzCrystal
   name: quartz
   description: Quartz is an essential mineral capable of interacting with magical energy. It is highly sought after by alchemists for extracting beneficial properties from liquids
-  categories: [ HideSpawnMenu ]
+  categories: [ ForkFiltered ]
   components:
+  - type: Transform
+    anchored: true
   - type: Sprite
     drawdepth: Mobs
     sprite: _CP14/Structures/crystal.rsi
@@ -227,11 +229,15 @@
       fix1:
         shape:
           !type:PhysShapeCircle
-          radius: 0.4
-        density: 500
+          radius: 0.30
+        density: 60
+        mask:
+          - MachineMask
         layer:
-        - HalfWallLayer
-        - Opaque
+          - MidImpassable
+          - LowImpassable
+          - BulletImpassable
+          - Opaque
 
 # Blue amanita
 
